--- a/apache.yml
+++ b/apache.yml
@@ -2,13 +2,13 @@
 - hosts: webservers
   become: true
   tasks:
+   - name: update
+      apt: update_cache=yes 
   - name: installing pkg
-    apt:
-      name: "httpd"
-      state: "present"
+     apt: name=apache2 state=lates
   - name: start apache server
     services:
-      name: httpd
+      name: apache2
       state: started
       enabled: true
   - name: deploy static website
