--- a/apache.yml
+++ b/apache.yml
@@ -2,6 +2,9 @@
 - hosts: webservers
   become: true
   tasks:
+   - name: Update apt cache
+      apt:
+        update_cache: yes
   - name: installing pkg
     apt: 
       name: "httpd"
