--- a/apache.yml
+++ b/apache.yml
@@ -4,12 +4,12 @@
   tasks:
   - name: installing pkg
     apt: 
-      name: "httpd"
+      name: "apache2"
       update_cache: yes
       state: "present"
   - name: start apache server
     service:
-      name: httpd
+      name: apache2
       state: started
       enabled: true
   - name: deploy static website
